// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - colors - value[0] - SliderColorSelector 1`] = `
Array [
  Array [
    Object {
      "className": "{\\"style\\":[{\\"marginBottom\\":\\"0px !important\\"},null]}",
      "color": "#000000",
      "id": "colors_input",
      "onChangeComplete": [Function],
    },
    Object {},
  ],
]
`;

exports[`Mock render - default - value[0] - SliderColorSelector 1`] = `
Array [
  Array [
    Object {
      "className": "{\\"style\\":[{\\"marginBottom\\":\\"0px !important\\"},null]}",
      "color": "#000000",
      "id": "default_input",
      "onChangeComplete": [Function],
    },
    Object {},
  ],
]
`;

exports[`Mock render - defaultColor - value[0] - SliderColorSelector 1`] = `
Array [
  Array [
    Object {
      "className": "{\\"style\\":[{\\"marginBottom\\":\\"0px !important\\"},null]}",
      "color": "#11FF00",
      "id": "defaultColor_input",
      "onChangeComplete": [Function],
    },
    Object {},
  ],
]
`;

exports[`Mock render - inputStyle - value[0] - SliderColorSelector 1`] = `
Array [
  Array [
    Object {
      "className": "{\\"style\\":[{\\"marginBottom\\":\\"0px !important\\"},{\\"border\\":\\"3px solid blue\\"}]}",
      "color": "#000000",
      "id": "inputStyle_input",
      "onChangeComplete": [Function],
    },
    Object {},
  ],
]
`;

exports[`Mock render - label-disabled - value[0] - SliderColorSelector 1`] = `
Array [
  Array [
    Object {
      "className": "{\\"style\\":[{\\"marginBottom\\":\\"0px !important\\"},null]}",
      "color": "#000000",
      "id": "label-disabled_input",
      "onChangeComplete": [Function],
    },
    Object {},
  ],
]
`;

exports[`Mock render - title - value[0] - SliderColorSelector 1`] = `
Array [
  Array [
    Object {
      "className": "{\\"style\\":[{\\"marginBottom\\":\\"0px !important\\"},null]}",
      "color": "#000000",
      "id": "title_input",
      "onChangeComplete": [Function],
    },
    Object {},
  ],
]
`;
